拖拽排序网页模块开发完成

--- a/src/components/website/components/SortMenu/SortMenu.less
+++ b/src/components/website/components/SortMenu/SortMenu.less
@@ -35,7 +35,7 @@
 .tuo-zhuai-item-warp {
     width: 90%;
     height: 38px;
-    margin: 0 auto;
+    margin: 4px auto;
     line-height: 36px;
     position: relative;
     background: #e2e9ec;
@@ -147,24 +147,11 @@
     border-radius: 2px;
 }
 
-.ghost2 {
-    display: inline-block;
-    outline: 2px dashed #2d8cf0 !important;
-    height: 60px;
-    line-height: 60px;
-    // opacity: 0.8;
-    background: #fff;
-
-    .tuo-zhuai-tag {
-        top: 14px;
-    }
-
-    .edit-box,
-    .delete-box {
-        top: 12px;
-    }
+.dargDiv {
+    cursor: move;
 }
 
 .flip-list-move {
     transition: transform 0.2s;
 }
+
