--- a/src/components/website/index.less
+++ b/src/components/website/index.less
@@ -185,9 +185,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 18px;
-        color: #fff;
-        background: rgba(0,0,0,.5);
+        font-size: 15px;
+        color: #999;
+        background: #2a2c2d;
     }
 
     .web_pc_iframe {
