解决 拖拽数据 未及时更新的bug

--- a/src/components/website/components/SortMenu/SortMenu.less
+++ b/src/components/website/components/SortMenu/SortMenu.less
@@ -1,10 +1,12 @@
 .SortMenu{
     // color: #444;
+    height: 100% !important;
 }
 
 .web_module_warp {
     padding: 0px;
     margin: 0px;
+    height: 100% !important;
 }
 
 .web_module_title {
@@ -14,7 +16,7 @@
     line-height: 36px;
     color: #545454;
     font-size: 14px;
-    margin-bottom: 10px;
+    // margin-bottom: 10px;
 
     .close {
         display: block;
@@ -37,7 +39,7 @@
     min-height: 38px;
     margin: 4px auto;
     line-height: 36px;
-    background: #e2e9ec;
+    // background: #e2e9ec;
     border-radius: 2px;
     display: block;
     cursor: move;
