--- a/src/components/website/index.less
+++ b/src/components/website/index.less
@@ -90,6 +90,7 @@
 
     .modal-content {
         color: #444;
+        height: 100%;
     }
 }
 
@@ -107,6 +108,7 @@
 
     .modal-content {
         color: #444;
+        height: 100%;
     }
 }
 
