调整 拖拽的样式

--- a/src/components/website/components/SortMenu/SortMenu.less
+++ b/src/components/website/components/SortMenu/SortMenu.less
@@ -39,10 +39,11 @@
     min-height: 38px;
     margin: 4px auto;
     line-height: 36px;
-    // background: #e2e9ec;
+    background: #e2e9ec;
     border-radius: 2px;
     display: block;
     cursor: move;
+    color: #2a2a2b;
     margin-bottom: 4px;
 
     &:hover {
@@ -69,7 +70,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #a0a3a5;
+    color: #FF5722;
 }
 
 .tuo-zhuai-text {
@@ -81,7 +82,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     margin-left: 35px;
-    color: #2a2a2b;
+    // color: #2a2a2b;
     font-size: 13px;
     margin-top: -1px;
 }
@@ -100,7 +101,7 @@
         display: inline-block;
         vertical-align: -5px;
         margin-left: 0px;
-        color: #2a2a2b;
+        // color: #2a2a2b;
         font-weight: 600;
         cursor: pointer;
     }
@@ -126,7 +127,7 @@
         display: inline-block;
         vertical-align: -5px;
         margin-left: -1px;
-        color: #2a2a2b;
+        // color: #2a2a2b;
         font-weight: 600;
         cursor: pointer;
     }
