网站设计-模块管理栏目-开发

--- a/src/components/website/components/SortMenu/SortMenu.less
+++ b/src/components/website/components/SortMenu/SortMenu.less
@@ -16,8 +16,6 @@
     line-height: 36px;
     color: #545454;
     font-size: 14px;
-    // margin-bottom: 10px;
-
     .close {
         display: block;
         color: #5e6061;
@@ -70,7 +68,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #FF5722;
+    // color: #FF5722;
+    color: rgb(228, 240, 255);
 }
 
 .tuo-zhuai-text {
