--- a/src/components/website/index.less
+++ b/src/components/website/index.less
@@ -1,3 +1,6 @@
+.clear {
+    clear: both;
+}
 .WebEditWarp {
     position: relative;
     height: 100%;
@@ -197,4 +200,57 @@
         height: 100%;
         background: #fff;
     }
+}
+
+
+
+
+
+
+
+/*
+* 网站编辑每个模块的 公共样式文件
+*/
+
+.components-container {
+    padding: 20px;
+}
+
+.form_save {
+    width: 100%;
+    text-align: center;
+    margin: 30px 0px 0px;
+}
+
+.mask-button {
+    display: inline-block;
+    width: auto;
+    line-height: 24px;
+    height: 24px;
+    padding: 6px 10px;
+    border: 0;
+    outline: 0;
+    cursor: pointer;
+    text-decoration: none;
+    white-space: nowrap;
+    user-select: none;
+    text-align: center;
+    box-sizing: content-box;
+    vertical-align: middle;
+}
+
+.save {
+    background: #2d8cf0;
+    color: #fff;
+    padding: 6px 30px;
+    border-radius: 3px;
+    border-color: #f3f1ec;
+}
+
+.cancel {
+    background: #a3aaad;
+    color: #fff;
+    margin-left: 8px;
+    padding: 6px 30px;
+    border-radius: 3px;
 }
