--- a/src/index.less
+++ b/src/index.less
@@ -5,6 +5,15 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html,body,#root {
+    height: 100% !important;
+}
+
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
