--- a/public/tem5/css/tem5.css
+++ b/public/tem5/css/tem5.css
@@ -884,7 +884,7 @@ ul {
       -ms-flex-pack: center;
           justify-content: center;
   margin-right: 18px;
-  background: #fff;
+  background: transparent;
   -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
   vertical-align: middle;
