模板选择 开发

--- a/src/components/website/components/TemplateList/TemplateList.less
+++ b/src/components/website/components/TemplateList/TemplateList.less
@@ -18,7 +18,7 @@
         .swith_ls {
             margin-left: 8px;
             margin-top: 4px;
-            vertical-align: -7px;
+            vertical-align: 1px;
         }
     }
 }
@@ -40,7 +40,6 @@
     line-height: 36px;
     color: #545454;
     font-size: 14px;
-    margin-bottom: 10px;
 
     .close {
         display: block;
@@ -163,21 +162,21 @@
     .text_left {
         margin-top: 10px;
 
-        a {
+        .span {
             background: transparent;
-            color: #3c9e95;
+            color: #666666;
             text-decoration: none;
             font-size: 13px;
             transition: all .3s;
 
             &:hover {
-                color: #666666;
+                color: #2d8cf0;
             }
         }
 
         i {
             font-size: 16px;
-            vertical-align: -1px;
+            vertical-align: -2px;
         }
     }
 
