--- a/src/components/website/index.less
+++ b/src/components/website/index.less
@@ -1,6 +1,7 @@
 .clear {
     clear: both;
 }
+
 .WebEditWarp {
     position: relative;
     height: 100%;
@@ -8,6 +9,25 @@
     background: #fff;
     color: #413d3e;
     overflow: hidden;
+
+    .spinWarp {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background: #edf2f3b0;
+        z-index: 9999;
+        height: 100%;
+        overflow: hidden;
+
+        .spinCoat {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    }
 }
 
 // 头部定位 导航
@@ -15,7 +35,7 @@
     // min-width: 1280px;
     height: 50px;
     background: #fff;
-    box-shadow: 0 1px 4px 0 rgba(0,0,0,0.137);
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.137);
     position: fixed;
     left: 0;
     top: 0;
@@ -25,7 +45,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    .back-btn{
+
+    .back-btn {
         display: inline-block;
         min-width: 40px;
         height: 40px;
@@ -34,20 +55,23 @@
         text-align: center;
         cursor: pointer;
     }
-    .btn-1{
+
+    .btn-1 {
         padding: 0px 6px;
         width: 310px;
         height: 50px;
         line-height: 50px;
         text-align: left;
-        img{
+
+        img {
             max-width: 35px;
             min-width: 35px;
             vertical-align: -20px;
             position: relative;
             top: -8px;
         }
-        span{
+
+        span {
             font-size: 16px;
             display: inline-block;
             vertical-align: -1px;
@@ -56,37 +80,43 @@
             margin-left: 10px;
         }
     }
-    .icon-coat{
+
+    .icon-coat {
         width: 80px;
         display: flex;
         align-items: center;
         justify-content: center;
         border: 1px solid #e8e8e8;
         border-radius: 2px;
-        .btn-2{
+
+        .btn-2 {
             color: #666;
             opacity: .5;
-            &:hover{
+
+            &:hover {
                 color: #202020;
                 opacity: 1;
             }
         }
-        .btn-3{
+
+        .btn-3 {
             border-left: 1px solid #e8e8e8;
             color: #666;
             opacity: .5;
-            &:hover{
+
+            &:hover {
                 color: #202020;
                 opacity: 1;
             }
         }
     }
 
-    .btn-4-coat{
+    .btn-4-coat {
         width: 310px;
         text-align: right;
         position: relative;
-        .preview-box{
+
+        .preview-box {
             padding: 10px;
             position: absolute;
             background: #fff;
@@ -94,14 +124,16 @@
             right: 78px;
             width: 200px;
             height: 260px;
-            box-shadow: 0 1px 8px 0 rgba(0,0,0,.2), 0 3px 4px 0 rgba(0,0,0,.14), 0 3px 3px -2px rgba(0,0,0,.12);
+            box-shadow: 0 1px 8px 0 rgba(0, 0, 0, .2), 0 3px 4px 0 rgba(0, 0, 0, .14), 0 3px 3px -2px rgba(0, 0, 0, .12);
             text-align: center;
+
             p {
                 margin-left: 10px;
             }
         }
     }
-    .btn-4{
+
+    .btn-4 {
         height: 32px;
         line-height: 30px;
         color: #ff5303;
@@ -111,7 +143,8 @@
         padding-right: 12px;
         margin-right: 12px;
         font-weight: 400;
-        &:hover{
+
+        &:hover {
             color: #2d8cf0;
             border: 1px solid #2d8cf0;
         }
@@ -273,15 +306,25 @@
     width: calc(~"100% - 75px");
     height: 100%;
     background: #ecf1f4;
+    position: relative;
 
-    .none-content {
+    .noneContent {
+        width: 100%;
         height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 15px;
-        color: #999;
-        background: #2a2c2d;
+        position: absolute;
+        z-index: 2;
+        top: 0;
+        left: 0;
+        background: #edf2f3b0;
+        overflow: hidden;
+
+        .spinCoat {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
     }
 
     .web_pc_iframe {
