--- a/src/components/website/components/ModuleList/ModuleList.less
+++ b/src/components/website/components/ModuleList/ModuleList.less
@@ -40,7 +40,7 @@
         margin: 0px 3px 8px;
         cursor: pointer;
         position: relative;
-        color: #414348;
+        color: #252527;
 
         .li-icon {
             margin-top: 12px;
@@ -55,7 +55,7 @@
     .li-nomar-hover{
         &:hover{
             opacity: .8;
-            color: rgb(255, 135, 79);
+            color: #0d6eff;
         }
     }
 
