--- a/src/components/website/index.less
+++ b/src/components/website/index.less
@@ -1,3 +1,9 @@
+/* 富文本高度设置 */ 
+.w-e-text-container{
+    height: auto !important;
+    min-height: 500px !important;
+}
+
 .clear {
     clear: both;
 }
