--- a/src/components/website/index.less
+++ b/src/components/website/index.less
@@ -57,20 +57,20 @@
         text-align: left;
 
         img {
-            max-width: 35px;
-            min-width: 35px;
-            vertical-align: -20px;
+            max-width: 27px;
+            min-width: 27px;
+            vertical-align: -10px;
             position: relative;
-            top: -8px;
         }
 
         span {
             font-size: 16px;
             display: inline-block;
             vertical-align: -1px;
-            color: #413d3e;
+            color: #ceab74;
             font-weight: 500;
             margin-left: 10px;
+            text-shadow: 1px 1px 1px #202020;
         }
     }
 
